# pasar

./: CMakeLists.txt  README.org
sat/glucose4/: ipasir.h  ipasirglucoseglue.cc
src/: adal.hpp  learn_actions.hpp  main.cpp  pasar.hpp  type_defs.hpp
src/abstraction/: abstraction.hpp  cegar_foreach.hpp  cycle_break.hpp  exist.hpp  fast_forward.hpp  foreach.hpp  formular.hpp  leaf_reduction.hpp  no_abstraction.hpp  no_guidance.hpp  sat_based_abstraction.hpp  true_exist.hpp  unrelaxed.hpp
src/problem/: abstract_plan.hpp  problem.cpp  problem.hpp  validate_plan.hpp
src/search/: depth_first_search.cpp  depth_first_search.hpp  greedy_best_first.cpp  greedy_best_first.hpp  no_search.hpp  search.hpp  state_hash.hpp
tools/: logger.hpp  parameter_processor.hpp
